--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@ phpstan.neon
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
+/public/build/*
+!/public/build/entrypoints.json
+!/public/build/manifest.json
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
