--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -45,7 +45,9 @@ jobs:
           tools: composer:2.5.6
 
       - name: Switch ENV to TEST
-        run: 'echo "APP_ENV=test" > .env'
+        run: |
+              echo "APP_ENV=test" > .env
+              echo 'DATABASE_URL="mysql://root:root@127.0.0.1:3306/pipeline?serverVersion=8.0&charset=utf8mb4"' >> .env.test
 
       - name: Install Composer dependencies
         run: 'composer install'
@@ -56,7 +58,7 @@ jobs:
       - name: Check assets
         run: |
               npm run build
-              git --no-pager diff --name-only
+              git --no-pager diff --name-only public/build/
 
 #              bash resources/pipeline/assets-check.sh
 
