--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -58,9 +58,7 @@ jobs:
       - name: Check assets
         run: |
               npm run build
-              git --no-pager diff --name-only public/build/
-
-#              bash resources/pipeline/assets-check.sh
+              bash resources/pipeline/assets-check.sh
 
       - name: Install Apache
         run: 'sudo bash resources/pipeline/apache-install.sh'
