--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "dbrekelmans/bdi": "^1.1",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.18.5",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
         "symfony/maker-bundle": "^1.51",
